# fpx

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  Tiltfile  biome.json  biome.jsonc  config.yaml  deny.toml  fpx.toml  mizu.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.common.json  wrangler.toml
api/: .neon  (+11 more)
examples/python-fastapi/: README.md  main.py  pyproject.toml
fpx/: Cargo.toml  README.md  build.rs
fpx-app/: Cargo.toml  Tauri.toml  tauri.conf.json
fpx-app/capabilities/: workspace.toml
fpx-app/icons/: icon.icns
fpx-app/src/: api_manager.rs  lib.rs  main.rs  state.rs
fpx-app/src/api_manager/: fpx_api.rs  legacy.rs
fpx-app/src/commands/: workspace.rs
fpx-app/src/models/: workspace.rs
fpx-lib/: Cargo.toml
fpx-lib/src/: api.rs  config.rs  data.rs  events.rs  lib.rs  otel.rs  service.rs
fpx-lib/src/api/: errors.rs  handlers.rs  models.rs
fpx-lib/src/api/handlers/: insights.rs  otel.rs  spans.rs  traces.rs
fpx-lib/src/api/models/: otel.rs  ts_compat.rs
fpx-lib/src/data/: fake_store.rs  libsql.rs  models.rs  sql.rs  util.rs
fpx-lib/src/data/libsql/: migrations.rs  util.rs
fpx-macros/: Cargo.toml  README.md
fpx-macros/src/: lib.rs
fpx-tauri/: Cargo.toml  tauri.conf.json
fpx-tauri/icons/: icon.icns
fpx-tauri/src/: commands.rs  main.rs  models.rs
fpx-workers/: Cargo.toml  README.md  package-lock.json  trace.json  wrangler.toml
fpx-workers/examples/send-trace/: README.md  trace.json
fpx-workers/src/: data.rs  handlers.rs  lib.rs  ws.rs
fpx-workers/src/handlers/: ws.rs
fpx-workers/src/middleware/: auth.rs
fpx-workers/src/ws/: client.rs  handlers.rs  worker.rs
fpx/src/: api.rs  canned_requests.rs  commands.rs  config.rs  data.rs  events.rs  ext.rs  grpc.rs  inspector.rs  lib.rs  main.rs  models.rs  otel_util.rs  schemas.rs  service.rs  static_analysis.rs  types.rs
fpx/src/api/: client.rs  errors.rs  grpc.rs  handlers.rs  mod.rs  models.rs  studio.rs  types.rs  ws.rs
fpx/src/api/handlers/: canned_requests.rs  inspect.rs  inspectors.rs  otel.rs  requestor.rs  requests.rs  routes.rs  settings.rs  spans.rs  traces.rs
fpx/src/api/models/: otel.rs  settings.rs
fpx/src/commands/: client.rs  debug.rs  dev.rs  system.rs
fpx/src/commands/client/: inspectors.rs  requests.rs  spans.rs  traces.rs
fpx/src/commands/debug/: ws.rs
fpx/src/commands/system/: database.rs
fpx/src/data/: libsql.rs  libsql_store.rs  migrations.rs  models.rs  sql.rs  store.rs  tests.rs  util.rs
fpx/src/data/libsql_store/: migrations.rs  tests.rs
fpx/src/data/libsql_store/migrations/: 20240723_create_responses.sql  20240918_create_settings.sql
fpx/src/data/migrations/: 00000000_migrations.sql  20240604_create_requests.sql  20240708_create_spans.sql
fpx/src/events/: memory.rs  mod.rs
fpx/src/github/: mod.rs
fpx/src/models/otel/: mod.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.resource.v1.rs  opentelemetry.proto.trace.v1.rs
fpx/src/static_analysis/: ast.rs  detected_route.rs
fpx/src/static_analysis/test-case/barrel-files/: utils.ts
fpx/src/static_analysis/test-case/bindings/: index.ts
fpx/src/static_analysis/test-case/module-imports/: db.ts  index.ts
fpx/src/static_analysis/test-case/multiple/: basic.ts  other.ts
fpx/src/static_analysis/test-case/split-routes/: index.ts  projects.ts  users.ts
fpxpy/: README.md  pyproject.toml
fpxpy/src/fpxpy/: JSONSpanExporter.py  __init__.py  capturePrint.py  logger.py  measure.py  routes.py  test_tracing.py  tracing.py  utils.py
model-experiments/: README.md  eval.ipynb  mistral.ipynb  mlx.ipynb  model_experiments.ipynb  package.json  pyproject.toml  scraping.ts  search-evaluations.ipynb  server.py  shared.py  torch.ipynb  tsconfig.json
model-experiments/evals/: 2024-06-27T17:16:43.227897-mlx-community-codegemma-7b-it-8bit-friendly.json  2024-06-27T17:22:55.125131-mlx-community-codegemma-7b-it-4bit-friendly.json
model-experiments/issues/: drizzle-team-drizzle-kit-mirror.json  honojs-middleware.json  neondatabase-serverless.json
model-experiments/minilm/: minilm-embeddings-test.ts  minilm-embeddings.ts
model-experiments/mlartifacts/486045452020666570/b608fda0eb134290a3d7ade79040b070/artifacts/: eval_results_table.json
model-experiments/mlartifacts/705584557242097722/6cc0fa30f48f4c9daade2731e31689fe/artifacts/: eval_results_table.json
model-experiments/mlartifacts/705584557242097722/8e3c90d377e341a8a8133e9b994b60ea/artifacts/: eval_results_table.json
model-experiments/mlartifacts/705584557242097722/bfc9f309e27d42c281046a448faa78be/artifacts/: eval_results_table.json
model-experiments/mlruns/0/: meta.yaml
model-experiments/mlruns/705584557242097722/: meta.yaml
model-experiments/mlruns/705584557242097722/02ddc268690a4de7867fe95bb28ee230/: meta.yaml
model-experiments/mlruns/705584557242097722/02ddc268690a4de7867fe95bb28ee230/tags/: mlflow.runName
model-experiments/mlruns/705584557242097722/531f9c31592b44e38675127f6df2ec2d/: meta.yaml
model-experiments/mlruns/705584557242097722/6012e72ea9de400d8ae74c1342202bcd/: meta.yaml
model-experiments/mlruns/705584557242097722/62fc901b197741e8b09ab0ef419bee45/: meta.yaml
model-experiments/mlruns/705584557242097722/6cc0fa30f48f4c9daade2731e31689fe/: meta.yaml
model-experiments/mlruns/705584557242097722/8e3c90d377e341a8a8133e9b994b60ea/: meta.yaml
model-experiments/mlruns/705584557242097722/b65e9e5dda204ebe8b947908d8dc9a6e/: meta.yaml
model-experiments/mlruns/705584557242097722/bd338b3a5bb648fba883170b9c254a15/: meta.yaml
model-experiments/mlruns/705584557242097722/bfc9f309e27d42c281046a448faa78be/: meta.yaml
model-experiments/mlruns/705584557242097722/e7078869af1e4cca99b8967afb2d9b90/: meta.yaml
model-experiments/testing-dataset/: test-dataset-prep.md
xtask/: Cargo.toml  README.md
xtask/src/: commands.rs  main.rs
xtask/src/commands/: otel_types.rs  schemas.rs  static_analysis.rs  types.rs
zed-extension/: Cargo.toml  extension.toml
zed-extension/src/: extension.rs
(+2320 files in other folders)
