[workspace]
resolver = "2"
members = ["fpx", "fpx-macros", "xtask"]
default-members = ["fpx"]

[workspace.package]
authors = ["Fiberplane <info@fiberplane.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fiberplane/fpx"

[workspace.dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "env"] }
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.39", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1" }
url = { version = "2.5" }
