[package]
name = "fpx-app"
description = "A Tauri App"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.11", features = [] }

[dependencies]
axum = { workspace = true, default-features = false, features = [
    "http1",
    "query",
    "tokio",
    "tracing",
    "ws",
] }
fpx = { version = "0.1.0", path = "../fpx", features = ["config", "libsql"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0.0-rc.14", features = ["config-toml"] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-store = { version = "2.0.0-rc" }
tokio = { version = "1", default-features = false, features = ["sync"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.0-rc"
