[package]
name = "fpx-macros"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.10.0"
syn = { version = "2.0.75", features = ["full"] }
proc-macro-error = "1.0.4"
quote = "1.0.36"
