[package]
name = "fpx-tauri"
description = "A Tauri App"
edition = "2021"
rust-version = "1.60"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "1.7.2", features = [
  "path-all",
  "dialog-open",
  "http-all",
  "shell-all",
] }
tauri-plugin-window-state = "0.1.0"
tauri-plugin-store = { version = "0.0.0", git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
toml = "0.7.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
