[package]
name = "fpx-workers"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7", default-features = false }
console_error_panic_hook = { version = "0.1.1" }
fpx-lib = { path = "../fpx-lib" }
tower-service = "0.3.2"
worker = { version = "0.3", features = ['http', 'axum'] }
worker-macros = { version = "0.3", features = ['http'] }
