[package]
name = "fpx-workers"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7", default-features = false }
console_error_panic_hook = { version = "0.1" }
fpx-lib = { path = "../fpx-lib" }
getrandom = { version = "0.2", features = ["js"] } # Required for its feature
time = { version = "0.3", features = ['wasm-bindgen'] }
tower-service = "0.3.2"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "json",
    "time",
    "ansi",
] }
tracing-web = { version = "0.1", default-features = false }
worker = { version = "0.3", features = ['http', 'axum'] }
worker-macros = { version = "0.3", features = ['http'] }
