[package]
name = "fpx"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.7", features = [
  "http1",
  "ws",
  "tracing",
  "tokio",
  "query",
] }
boon = "0.6.0"
clap = { version = "4.0", features = ["derive", "env"] }
futures-util = { version = "0.3" }
http = { version = "1.1" }
once_cell = { version = "1.19" }
rand = { version = "0.8.5" }
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
  "json",
] }
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.37", features = ["rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2.5" }
