[project]
name = "fpxpy"
version = "0.1.0"
authors = [
    { name = "Fiberplane", email = "support@fiberplane.com" },
    { name = "mellowagain", email = "py@mari.zip" },
    { name = "flenter", email = "flenter@users.noreply.github.com" }
]
description = "Fiberplane studio integration with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-sdk>=1.29.0",
    "requests>=2.32.3",
    "tracing>=0.1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fiberplane/fpx"
Issues = "https://github.com/fiberplane/fpx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

