[tool.poetry]
name = "model-experiments"
version = "0.1.0"
description = ""
authors = ["Fiberplane <info@fiberplane.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.13.2"
setuptools = "^70.0.0"
jupyterlab = "^4.2.2"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
mlx-lm = "^0.14.3"
transformers = "^4.41.2"
accelerate = "^0.31.0"
huggingface-hub = "^0.23.4"
ipywidgets = "^8.1.3"
sentencepiece = "^0.2.0"
tokenizers = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
