[package]
name = "xtask"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
fpx = { version = "0.1.0", path = "../fpx" }
fpx-app = { version = "0.1.0", path = "../fpx-app" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
typeshare-core = { version = "1.9" }
url = { workspace = true }
