[package]
name = "fiberplane-studio-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
zed_extension_api = "0.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
# isahc = { version = "1.7.2", features = ["json"] }
fpx-lib = { version = "0.1.0", path = "../fpx-lib" }


[lib]
path = "src/extension.rs"
crate-type = ["cdylib"]
