[project]
name = "python-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataclasses-json>=0.6.7",
    "fastapi[standard]>=0.115.6",
    "fpxpy",
    "tracing>=0.1.3",
]

[tool.uv.sources]
fpxpy = { path = "../../fpxpy" }
